<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menuitem_add_title">Add</string>
    <string name="menuitem_durations_title">Duration</string>
    <string name="menuitem_about_title">About</string>
    <string name="menuitem_generate_title">Generate</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_description_hint">Description of the task</string>
    <string name="addedit_sort_hint">Sort order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="pos_remove_task">Confirm</string>
    <string name="neg_remove_task">Cancel</string>
    <string name="save_add_edit_neg_string">Discard Changes</string>
    <string name="save_add_edit_pos_string">Stay</string>
    <string name="save_add_edit_back_press">You have unsaved changes. Are you sure you want to discard them?</string>
    <string name="about_instructions">Instructions available at www.learnprogramming.academy</string>
    <string name="about_email">For support email tasktimer@learnprogramming.academy</string>
    <string name="about_copyright">Copyright © LearnProgramming academy</string>
    <string name="about_icon_credit">Icon derived from <b> analog clock </b> at openclipart.org by <b> Anonymous </b></string>
    <string name="no_task_timing">No task Selected</string>
    <string name="td_text_name">Task name</string>
    <string name="td_text_start">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="activity_reports_name">Reports</string>
    <string name="report_menu_item_day">Day</string>
    <string name="report_menu_item_week">Week</string>
    <string name="report_menu_item_calendar">Pick Date</string>
    <string name="timings_delete_confirm_mesage">Are you sure you want to delete entries</string>
    <string name="timings_delete_negative_message">Cancel</string>
    <string name="timings_delete_positive_message">Confirm Delete</string>
</resources>