<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="np.com.ankitkoirala.tasktimer.MainActivity">
    <item
        android:id="@+id/menuitem_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/menuitem_add_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuitem_durations"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="101"
        android:title="@string/menuitem_durations_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuitem_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuitem_about"
        android:icon="@android:drawable/star_big_off"
        android:orderInCategory="103"
        android:title="@string/menuitem_about_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuitem_generate"
        android:orderInCategory="104"
        android:title="@string/menuitem_generate_title" />
</menu>