<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingLeft="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding"
    android:paddingRight="?attr/dialogPreferredPadding"
    android:paddingBottom="?attr/dialogPreferredPadding">

    <TextView
        android:id="@+id/about_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        tools:text="1.0.0" />

    <TextView
        android:id="@+id/about_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="1dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:textStyle="bold"
        tools:text="1.0.0" />

    <TextView
        android:id="@+id/about_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_copyright" />

    <TextView
        android:id="@+id/about_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:text="@string/about_instructions" />

    <TextView
        android:id="@+id/about_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:text="@string/about_email" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_icon_credit" />
</LinearLayout>